--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Python
-__pycache__/
+__pycache__
 *.py[cod]
 *$py.class
 *.so
@@ -44,3 +44,5 @@ context_audio.wav
 # Model files
 *.pt
 *.ckpt
+
+local_models/
