--- a/kubernetes/caddy-config.yml
+++ b/kubernetes/caddy-config.yml
@@ -5,5 +5,5 @@ metadata:
 data:
   Caddyfile: |
     :8383 {
-        reverse_proxy csm-api-service:8383
+        reverse_proxy csm-service:8383
     }
